--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,6 @@
-#Elasticsearch variables
-#ES_HOST=0.0.0.0
-ES_HOST=elastic_5
-ES_PORT=9200
-ELASTIC_VERSION=8.10.2
-
-#app variables
-APP_PORT=8003
-
-#VPS
-VPS_HOST=5.35.83.245
+RABBITMQ_QUEUE=test_queue
+RABBITMQ_DEFAULT_USER=user
+RABBITMQ_DEFAULT_PASS=password
+RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS=-rabbit disk_free_limit 2147483648
+RABBITMQ_LOCAL_HOST_NAME=rabbit
+RABBITMQ_LOCAL_PORT=5672
