--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+
+/src/logs/consumer.log
+/src/logs/fastapi.log
+/src/logs/message.txt
+/src/logs/test_queue_message.txt
+/src/logs/QUEUE_AAA_message.txt
+/src/logs/QUEUE_BBB_message.txt
+/src/logs/QUEUE_CCC_message.txt
